Make azureAD configuration simpler Gzip monitool2.(js|css) in the build step, instead of doing it at each request. Remove useless dependency to serve-static (this is bundled in express) Clean up monitool initialization file (reorder express controllers, create middleware). Fix the progressbar when loading the monitool2.js bundle on Chrome and Firefox (IE status untested...) Add a validation step to the config file, so that monitool refuse to start when invalid. Admin account can now be decided from the configuration file (avoid having to connect to couchdb to edit documents) Disable debug mode in jade.

--- a/config-template.json
+++ b/config-template.json
@@ -11,11 +11,10 @@
 		"password": ""
 	},
 	"auth": {
+		"administrator": "romain.gilliotte",
 		"azureAD": {
 			"label": "Use MDM account",
 			"domain": "medecinsdumonde.net",
-			"authUrl": "https://login.windows.net/common/oauth2/authorize",
-			"tokenUrl": "https://login.windows.net/common/oauth2/token",
 			"clientId": "[enter client id]",
 			"clientSecret": "[enter client secret]"
 		},
