Move google translate API key to configuration

--- a/config-template.json
+++ b/config-template.json
@@ -10,6 +10,9 @@
 		"username": "",
 		"password": ""
 	},
+	"api": {
+		"google": "[enter google translate api key here]"
+	},
 	"auth": {
 		"administrator": "romain.gilliotte",
 		"azureAD": {
