--- a/server/resource/schema/project.json
+++ b/server/resource/schema/project.json
@@ -66,7 +66,7 @@
 						"properties": {
 							"type": {"type": "string", "pattern": "^internal$"},
 							"id": {"type": "string", "pattern": "^usr:[a-z0-9\\.\\-\\_]+$"},
-							"role": {"type": "string", "enum": ["owner", "input_all", "input", "read"]},
+							"role": {"type": "string", "enum": ["owner", "input", "read"]},
 							"entities": {"type": "array", "items": { "$ref": "#/definitions/uuid_or_none" } }
 						}
 					},
@@ -77,7 +77,7 @@
 						"properties": {
 							"type": {"type": "string", "pattern": "^partner$"},
 							"name": {"type": "string", "minLength": 1},
-							"role": {"type": "string", "enum": ["owner", "input_all", "input", "read"]},
+							"role": {"type": "string", "enum": ["owner", "input", "read"]},
 
 							"username": {"type": "string", "minLength": 1},
 							"password": {
