--- a/server/resource/schema/project.json
+++ b/server/resource/schema/project.json
@@ -38,21 +38,7 @@
 
 		"forms": {
 			"type": "array",
-			"items": {
-				"type": "object",
-				"additionalProperties": false,
-				"required": ["id", "name", "collect", "periodicity", "start", "end", "elements"],
-				"properties": {
-					"id": { "$ref": "#/definitions/uuid" },
-					"name": { "type": "string", "minLength": 1 },
-					"entities": { "type": "array", "items": { "$ref": "#/definitions/uuid" } },
-					"collect": { "type": "string", "enum": ["project", "entity", "some_entity"] },
-					"periodicity": { "type": "string", "enum": ["day", "week_sat", "week_sun", "week_mon", "month", "quarter", "semester", "year", "free"] },
-					"start": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]},
-					"end": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]},
-					"elements": {"type": "array"}
-				}
-			}
+			"items": {"type": "object"}
 		},
 
 		"users": {
@@ -67,7 +53,7 @@
 							"type": {"type": "string", "pattern": "^internal$"},
 							"id": {"type": "string", "pattern": "^usr:[a-z0-9\\.\\-\\_]+$"},
 							"role": {"type": "string", "enum": ["owner", "input", "read"]},
-							"entities": {"type": "array", "items": { "$ref": "#/definitions/uuid_or_none" } }
+							"entities": {"type": "array", "items": { "$ref": "#/definitions/uuid" } }
 						}
 					},
 					{
@@ -89,7 +75,7 @@
 
 							"entities": {
 								"type": "array",
-								"items": { "$ref": "#/definitions/uuid_or_none" }
+								"items": { "$ref": "#/definitions/uuid" }
 							}
 						}
 					}
@@ -163,10 +149,6 @@
 		"uuid": {
 			"type": "string",
 			"pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
-		},
-		"uuid_or_none": {
-			"type": "string",
-			"pattern": "^(([a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12})|(none))$"
 		},
 		"revision": {
 			"type": "string",
