Fixes #52: Move PDF generation to the server to reduce the size of the bundle users have to download.

--- a/client/bower.json
+++ b/client/bower.json
@@ -32,7 +32,6 @@
     "canvas-to-Blob.js": "master",
     "file-saver": "master",
     "blob": "master",
-    "angular-mocks": "~1.5.8",
-    "pdfmake": "^0.1.20"
+    "angular-mocks": "~1.5.8"
   }
 }
