--- a/server/resource/schema/project.json
+++ b/server/resource/schema/project.json
@@ -53,7 +53,11 @@
 							"type": {"type": "string", "pattern": "^internal$"},
 							"id": {"type": "string", "pattern": "^usr:[a-z0-9\\.\\-\\_]+$"},
 							"role": {"type": "string", "enum": ["owner", "input", "read"]},
-							"entities": {"type": "array", "items": { "$ref": "#/definitions/uuid" } }
+							"entities": {"type": "array", "items": { "$ref": "#/definitions/uuid" } },
+							"dataSources": {
+								"type": "array",
+								"items": { "$ref": "#/definitions/uuid" }
+							}
 						}
 					},
 					{
@@ -74,6 +78,10 @@
 							},
 
 							"entities": {
+								"type": "array",
+								"items": { "$ref": "#/definitions/uuid" }
+							},
+							"dataSources": {
 								"type": "array",
 								"items": { "$ref": "#/definitions/uuid" }
 							}
