--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-jasmine": "x",
     "karma-spec-reporter": "x",
     "mocha": "^3.2.0",
+    "mock-couch": "^0.1.8",
     "node-uuid": "x",
     "request": "x",
     "streamqueue": "x"
