--- a/package.json
+++ b/package.json
@@ -47,14 +47,9 @@
     "is-my-json-valid": "x",
     "memory-cache": "^0.1.6",
     "nano": "x",
-    "oauth2orize": "x",
-    "passport": "x",
-    "passport-http": "x",
-    "passport-http-bearer": "x",
-    "passport-http-oauth": "x",
-    "passport-local": "x",
-    "passport-oauth2": "x",
-    "passport-oauth2-client-password": "x",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
     "password-hash": "x",
     "pdfmake": "^0.1.27",
     "pug": "^2.0.0-beta.12",
