--- a/config-template.json
+++ b/config-template.json
@@ -2,6 +2,7 @@
 	"debug": true,
 	"baseUrl": "http://localhost:8000",
 	"port": 8000,
+	"cookieSecret": "abcdef",
 	"couchdb": {
 		"host": "localhost",
 		"port": 5984,
