--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,6 +3,8 @@ server {
 	listen 80;
 
 	server_name monitool-training.medecinsdumonde.net;
+	gzip on;
+	gzip_types text/css image/svg+xml application/javascript application/json;
 
 	location / {
 		root /usr/share/nginx/html;
