--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -1,7 +1,8 @@
 version: "3.6"
 
 services:
-  frontend:
+
+  reverse_proxy:
     image: romaingilliotte/monitool-frontend:latest
     networks:
       - frontend
@@ -9,6 +10,8 @@ services:
       - "80:80"
     depends_on:
       - api
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   api:
     image: romaingilliotte/monitool-api:latest
@@ -22,21 +25,18 @@ services:
       MONITOOL_PORT: "80"
       MONITOOL_COOKIE_SECRET: "123456789"
       MONITOOL_COUCHDB_HOST: "couchdb"
-      MONITOOL_API_GOOGLE_FILE: "/var/run/secrets/google_client_api_key"
+      MONITOOL_API_GOOGLE_FILE: "/var/run/secrets/googletranslate_apikey"
       MONITOOL_AUTH_ADMINISTRATOR: "training"
       MONITOOL_AUTH_PROVIDERS_AZUREAD: "FALSE"
       MONITOOL_AUTH_PROVIDERS_TRAINING: "TRUE"
       MONITOOL_AUTH_PROVIDERS_TRAINING_ACCOUNT: "training"
     secrets:
-      - google_client_api_key
+      - googletranslate_apikey
 
   couchdb:
     image: couchdb:1
     networks:
       - backend
-    environment:
-      COUCHDB_USER: "admin"
-      COUCHDB_PASSWORD: ""
     volumes:
       - couchdb-data:/usr/local/var/lib/couchdb
 
@@ -45,7 +45,7 @@ networks:
   backend:
 
 secrets:
-  google_client_api_key:
+  googletranslate_apikey:
     external: true
 
 volumes:
