--- a/docker/compose-develop.yml
+++ b/docker/compose-develop.yml
@@ -48,6 +48,8 @@ services:
 
   couchdb:
     image: couchdb:1
+    ports:
+      - "5984:5984"
     environment:
       COUCHDB_USER: "admin"
       COUCHDB_PASSWORD: ""
