--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -101,7 +101,7 @@
 						"properties": {
 							"type": {"type": "string", "pattern": "^internal$"},
 							"id": {"type": "string", "pattern": "^user:[a-z0-9\\.\\-\\_]+$"},
-							"role": {"type": "string", "enum": ["owner", "input", "read"]},
+							"role": {"type": "string", "enum": ["input"]},
 
 							"entities": {
 								"type": "array",
@@ -122,7 +122,7 @@
 						"properties": {
 							"type": {"type": "string", "pattern": "^partner$"},
 							"name": {"type": "string", "minLength": 1},
-							"role": {"type": "string", "enum": ["owner", "input", "read"]},
+							"role": {"type": "string", "enum": ["input"]},
 
 							"username": {"type": "string", "minLength": 1},
 							"password": {
