--- a/api/package.json
+++ b/api/package.json
@@ -43,7 +43,7 @@
     "winston": "^2.3.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/nodemon lib/main.js --exec ./node_modules/.bin/babel-node",
+    "start": "./node_modules/.bin/nodemon lib/main.js --exitcrash --exec ./node_modules/.bin/babel-node",
     "build": "./node_modules/.bin/babel lib -d dist --copy-files",
     "serve": "node dist/main.js",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive test"
