--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,12 @@
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
@@ -42,7 +44,7 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
+    "build": "./node_modules/.bin/webpack -p",
     "watch": "./node_modules/.bin/webpack --watch"
   }
 }
