Add gzip and brotli compression (static for assets, on the fly for api). Set proper cache headers (index.html needs to be reloaded each time, all the rest can be cached forever)

--- a/docker/compose-develop.yml
+++ b/docker/compose-develop.yml
@@ -3,7 +3,7 @@ version: "3.6"
 services:
 
   reverse_proxy:
-    image: nginx
+    image: fholzer/nginx-brotli
     ports:
       - "80:80"
     volumes:
