--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,18 +1,40 @@
 
+# Expires maps
+map $sent_http_content_type $static_expires {
+    default                    off;
+    text/html                  epoch;
+    text/css                   max;
+    application/javascript     max;
+    ~image/                    max;
+}
+
 server {
 	listen 80;
 
 	server_name monitool-training.medecinsdumonde.net;
-	gzip on;
-	gzip_types text/css image/svg+xml application/javascript application/json;
+	brotli off;
+	gzip off;
 
 	location / {
+		gzip_static on;
+		gzip_vary on;
+
+		brotli_static on;
+
+		expires $static_expires;
+
 		root /usr/share/nginx/html;
 		index index.html;
 	}
 
 	# The trailing slashes here are important
 	location /api/ {
+		gzip on;
+		gzip_types application/json;
+
+		brotli on;
+		brotli_types application/json;
+
 		proxy_pass http://api/;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
