--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "angular-translate-storage-local": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "3",
+    "brotli-webpack-plugin": "^0.5.0",
     "c3": "~0.4.11",
     "diacritics": "^1.3.0",
     "expr-eval": "^1.2.1",
@@ -24,7 +25,8 @@
     "sortablejs": "^1.7.0",
     "timeslot-dag": "^0.1.0",
     "ui-select": "^0.19.8",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "zopfli-webpack-plugin": "^0.1.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
