--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "angular-translate": "^2.17.1",
     "angular-translate-storage-local": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.6",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "3",
     "brotli-webpack-plugin": "^0.5.0",
     "c3": "~0.4.11",
