Migrate api from express to koa

--- a/api/package.json
+++ b/api/package.json
@@ -23,22 +23,22 @@
     "nodemon": "x"
   },
   "dependencies": {
-    "body-parser": "x",
-    "connect-couchdb": "x",
-    "cookie-parser": "x",
-    "express": "x",
-    "express-session": "x",
     "fast-json-patch": "^2.0.6",
     "is-my-json-valid": "x",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-cookie": "^1.0.0",
+    "koa-passport": "^4.0.1",
+    "koa-response-time": "^2.0.0",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "memory-cache": "^0.1.6",
     "nano": "x",
     "node-uuid": "x",
-    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
     "password-hash": "x",
     "pdfmake": "^0.1.27",
-    "pug": "^2.0.0-beta.12",
     "roboto-fontface": "^0.7.0",
     "winston": "^2.3.1"
   },
