Replace tables by cards. Do not allow deleting projects anymore Rewrite project list page. Change background color to light grey, and add a box around content. Move all delete buttons to list (data sources, logframes, indicators, users...)

--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -11,6 +11,7 @@
 		"start",
 		"end",
 		"visibility",
+		"active",
 		"entities",
 		"groups",
 		"forms",
@@ -35,6 +36,7 @@
 		"start": { "type": "string", "format": "date" },
 		"end": { "type": "string", "format": "date" },
 		"visibility": { "type": "string", "enum": ["public", "private"]},
+		"active": { "type": "boolean" },
 
 		"entities": {
 			"type": "array",
