Deploy 4 replicas of API in training and production servers (to handle concurrent requests)

--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -13,6 +13,9 @@ services:
 
   api:
     image: medecinsdumonde/monitool-api:latest
+    deploy:
+      mode: replicated
+      replicas: 4
     networks:
       - backend
       - frontend
