--- a/docker/compose-production.yml
+++ b/docker/compose-production.yml
@@ -15,6 +15,9 @@ services:
 
   api:
     image: medecinsdumonde/monitool-api:latest
+    deploy:
+      mode: replicated
+      replicas: 4
     networks:
       - backend
       - frontend
