--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,7 @@
     "koa-response-time": "^2.0.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
-    "nano": "x",
+    "nano": "^7.0.0",
     "node-uuid": "x",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
