--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -37,7 +37,7 @@ services:
     networks:
       - backend
     volumes:
-      - couchdb-data:/usr/local/var/lib/couchdb
+      - couchdb-data:/opt/couchdb/data
 
 networks:
   frontend:
