In nginx, wait instead of crashing when api is not available

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -19,7 +19,7 @@ server {
 		gzip_static on;
 		gzip_vary on;
 
-		brotli_static on;
+		brotli_static on; # brotli_static adds the equivalent of gzip_vary alone.
 
 		expires $static_expires;
 
@@ -27,15 +27,27 @@ server {
 		index index.html;
 	}
 
-	# The trailing slashes here are important
-	location /api/ {
+	# The trailing slashes in /api/ is important
+	location ~ ^/api/(.*)$ {
+		# Compress using gzip or brotli on the fly.
 		gzip on;
 		gzip_types application/json;
 
 		brotli on;
 		brotli_types application/json;
 
-		proxy_pass http://api/;
+		# We create a variable with the destination route for proxy_pass
+		# so that the hostname is *not* resolved at start-up time.
+		# Doing otherwise causes nginx to crash during start-up if the api server
+		# is not already running.
+		set $api "api";
+
+		# This is required when using variables w/ proxy_pass
+		# 127.0.0.11 is the fixed IP of docker DNS resolver.
+		resolver 127.0.0.11 valid=180s;
+
+		# proxy_pass to api server on another container.
+		proxy_pass http://$api/$1$is_args$args;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
