--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -32,6 +32,14 @@ services:
     secrets:
       - googletranslate_apikey
 
+  redis:
+    image: redis:latest
+    command: "redis-server /usr/local/etc/redis/redis.conf"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
+    networks:
+      - backend
+
   couchdb:
     image: couchdb:latest
     networks:
