--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "expr-eval": "^1.2.1",
     "fast-json-patch": "^2.0.6",
+    "ioredis": "^4.0.0",
     "is-my-json-valid": "x",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
@@ -35,6 +36,7 @@
     "koa-session": "^5.8.1",
     "nano": "^7.0.0",
     "node-uuid": "x",
+    "object-hash": "^1.3.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
     "password-hash": "x",
