--- a/docker/compose-develop.yml
+++ b/docker/compose-develop.yml
@@ -16,9 +16,9 @@ services:
     command: sh -c "yarn install && yarn run watch"
     volumes:
       - ../frontend/src:/app/src:ro
-      - ../frontend/package.json:/app/package.json:ro
+      - ../frontend/package.json:/app/package.json
       - ../frontend/webpack.config.js:/app/webpack.config.js:ro
-      - ../frontend/yarn.lock:/app/yarn.lock:ro
+      - ../frontend/yarn.lock:/app/yarn.lock
       - frontend_dist:/app/dist
       - frontend_node_modules:/app/node_modules
 
@@ -43,6 +43,12 @@ services:
       MONITOOL_AUTH_PROVIDERS_TRAINING_ACCOUNT: "training"
     secrets:
       - googletranslate_apikey
+
+  redis:
+    image: redis:latest
+    command: "redis-server /usr/local/etc/redis/redis.conf"
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
 
   couchdb:
     image: couchdb:latest
