--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -47,6 +47,7 @@ server {
 		resolver 127.0.0.11 valid=180s;
 
 		# proxy_pass to api server on another container.
+		proxy_read_timeout 180s;
 		proxy_pass http://$api/$1$is_args$args;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
