--- a/api/package.json
+++ b/api/package.json
@@ -46,9 +46,9 @@
     "winston": "^2.3.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/nodemon lib/main.js --exitcrash --exec ./node_modules/.bin/babel-node",
+    "start": "./node_modules/.bin/nodemon lib/main-webapp.js --exitcrash --exec ./node_modules/.bin/babel-node",
     "build": "./node_modules/.bin/babel lib -d dist --copy-files",
-    "serve": "node dist/main.js",
+    "serve": "node dist/main-webapp.js",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive test"
   }
 }
