--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,6 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "nano": "^7.0.0",
-    "node-uuid": "x",
     "object-hash": "^1.3.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
@@ -43,6 +42,7 @@
     "pdfmake": "^0.1.27",
     "roboto-fontface": "^0.7.0",
     "timeslot-dag": "^0.1.3",
+    "uuid": "^3.3.2",
     "winston": "^2.3.1"
   },
   "scripts": {
