--- a/api/package.json
+++ b/api/package.json
@@ -46,7 +46,7 @@
     "winston": "^2.3.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/nodemon lib/main-webapp.js --exitcrash --exec ./node_modules/.bin/babel-node",
+    "start": "./node_modules/.bin/nodemon lib/main-webapp.js --exitcrash --exec ./node_modules/.bin/babel-node --inspect=0.0.0.0:9229",
     "build": "./node_modules/.bin/babel lib -d dist --copy-files",
     "serve": "node dist/main-webapp.js",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive test"
