--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -20,6 +20,7 @@ services:
       - backend
       - frontend
     environment:
+      NODE_ENV: "production"
       MONITOOL_DEBUG: "FALSE"
       MONITOOL_PORT: "80"
       MONITOOL_COOKIE_SECRET: "123456789"
