Use yarn install --frozen-lockfile to avoid permissions problems when mounting package.json/yarn.lock as read only files in containers

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 
 # Install prod + dev dependencies
 COPY package.json yarn.lock ./
-RUN yarn install
+RUN yarn install --frozen-lockfile
 
 # Build source code
 COPY lib ./lib
@@ -24,7 +24,7 @@ WORKDIR /app
 
 # Install prod dependencies only
 COPY package.json yarn.lock ./
-RUN yarn install --production
+RUN yarn install --production --frozen-lockfile
 
 # Retrieve pre-built source code from previous stage
 COPY --from=builder /app/dist ./dist
