--- a/docker/compose-develop.yml
+++ b/docker/compose-develop.yml
@@ -13,7 +13,7 @@ services:
   frontend_watch:
     image: node:8
     working_dir: /app
-    command: sh -c "yarn install && yarn run watch"
+    command: sh -c "yarn install --frozen-lockfile && yarn run watch"
     volumes:
       - ../frontend/src:/app/src:ro
       - ../frontend/package.json:/app/package.json
@@ -25,7 +25,7 @@ services:
   api:
     image: node:10
     working_dir: /app
-    command: sh -c "yarn install && yarn run start"
+    command: sh -c "yarn install --frozen-lockfile && yarn run start"
     ports:
       - "9229:9229" # debugger
     volumes:
