--- a/docker/compose-training.yml
+++ b/docker/compose-training.yml
@@ -31,7 +31,7 @@ services:
       MONITOOL_AUTH_PROVIDERS_TRAINING_ACCOUNT: "training"
 
   couchdb:
-    image: couchdb:latest
+    image: couchdb:2
     networks:
       - backend
     volumes:
