--- a/docker/compose-develop.yml
+++ b/docker/compose-develop.yml
@@ -38,6 +38,8 @@ services:
       MONITOOL_PORT: "80"
       MONITOOL_COOKIE_SECRET: "123456789"
       MONITOOL_COUCHDB_HOST: "couchdb"
+      MONITOOL_COUCHDB_USER: "admin"
+      MONITOOL_COUCHDB_PASS: "admin"
       MONITOOL_AUTH_ADMINISTRATOR: "training"
       MONITOOL_AUTH_PROVIDERS_AZUREAD: "FALSE"
       MONITOOL_AUTH_PROVIDERS_TRAINING: "TRUE"
