add cors management

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,7 +11,7 @@ map $sent_http_content_type $static_expires {
 server {
 	listen 80;
 
-	server_name monitool-training.medecinsdumonde.net;
+	server_name localhost;
 	brotli off;
 	gzip off;
 
