--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,9 @@
     "nodemon": "x"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "JSONStream": "^1.3.4",
+    "cors": "^2.8.5",
     "expr-eval": "^1.2.1",
     "fast-json-patch": "^2.0.6",
     "is-my-json-valid": "x",
