adding restart always everywhere in the docker

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   reverse_proxy:
     image: fholzer/nginx-brotli:v1.15.8
+    restart: always
     ports:
       - "8045:80"
     volumes:
@@ -35,6 +36,7 @@ services:
 
   couchdb:
     image: couchdb:2
+    restart: always
     ports:
       - "5984:5984"
     environment:
