--- a/docker/compose-production.yml.dist
+++ b/docker/compose-production.yml.dist
@@ -25,15 +25,15 @@ services:
       NODE_ENV: "production"
       MONITOOL_DEBUG: "FALSE"
       MONITOOL_PORT: "80"
-      MONITOOL_BASE_URL: "https://monitool.medecinsdumonde.net"
+      MONITOOL_BASE_URL: ""
       MONITOOL_COOKIE_SECRET_FILE: "/var/run/secrets/monitool_cookiesecret"
-      MONITOOL_COUCHDB_HOST: "couchdb"
-      MONITOOL_AUTH_ADMINISTRATOR: "romain.gilliotte"
+      MONITOOL_COUCHDB_HOST: ""
+      MONITOOL_AUTH_ADMINISTRATOR: ""
       MONITOOL_AUTH_PROVIDERS_AZUREAD: "TRUE"
       MONITOOL_AUTH_PROVIDERS_AZUREAD_LABEL: "Use MDM account"
-      MONITOOL_AUTH_PROVIDERS_AZUREAD_DOMAIN: "medecinsdumonde.net"
-      MONITOOL_AUTH_PROVIDERS_AZUREAD_TENANTID: "3c3a3c6a-8d0a-446a-ae82-cee5b605904e"
-      MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTID: "ec380c9b-e98c-4de9-a311-9fa2495e6daf"
+      MONITOOL_AUTH_PROVIDERS_AZUREAD_DOMAIN: ""
+      MONITOOL_AUTH_PROVIDERS_AZUREAD_TENANTID: ""
+      MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTID: ""
       MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTSECRET_FILE: "/var/run/secrets/azuread_clientsecret"
       MONITOOL_AUTH_PROVIDERS_TRAINING: "FALSE"
     secrets:
