--- a/docker/compose-production.yml.dist
+++ b/docker/compose-production.yml.dist
@@ -3,59 +3,53 @@ version: "3.6"
 services:
 
   reverse_proxy:
-    image: medecinsdumonde/monitool-frontend:latest
-    networks:
-      - frontend
+    image: fholzer/nginx-brotli:v1.15.8
+    restart: always
     ports:
-      # Production machine is running nginx on the host with certbot for TLS support.
-      # It should be moved to docker at a further point.
-      - "8000:80"
+      - "8045:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   api:
-    image: medecinsdumonde/monitool-api:latest
-    deploy:
-      mode: replicated
-      replicas: 2
-    networks:
-      - backend
-      - frontend
+    image: node:10
+    working_dir: /app
+    restart: always
+    command: sh -c "yarn install --frozen-lockfile && yarn run start"
+    ports:
+      - "9229:9229"
+    volumes:
+      - ../api/lib:/app/lib:ro
+      - ../api/package.json:/app/package.json:ro
+      - ../api/yarn.lock:/app/yarn.lock:ro
+      - api_node_modules:/app/node_modules
     environment:
-      NODE_ENV: "production"
       MONITOOL_DEBUG: "FALSE"
       MONITOOL_PORT: "80"
       MONITOOL_BASE_URL: ""
-      MONITOOL_COOKIE_SECRET_FILE: "/var/run/secrets/monitool_cookiesecret"
+      MONITOOL_COOKIE_SECRET: ""
       MONITOOL_COUCHDB_HOST: ""
+      MONITOOL_COUCHDB_USER: ""
+      MONITOOL_COUCHDB_PASS: ""
       MONITOOL_AUTH_ADMINISTRATOR: ""
       MONITOOL_AUTH_PROVIDERS_AZUREAD: "TRUE"
       MONITOOL_AUTH_PROVIDERS_AZUREAD_LABEL: "Use MDM account"
       MONITOOL_AUTH_PROVIDERS_AZUREAD_DOMAIN: ""
       MONITOOL_AUTH_PROVIDERS_AZUREAD_TENANTID: ""
       MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTID: ""
-      MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTSECRET_FILE: "/var/run/secrets/azuread_clientsecret"
+      MONITOOL_AUTH_PROVIDERS_AZUREAD_CLIENTSECRET: ""
       MONITOOL_AUTH_PROVIDERS_TRAINING: "FALSE"
-    secrets:
-      - azuread_clientsecret
-      - monitool_cookiesecret
 
   couchdb:
     image: couchdb:2
-    networks:
-      - backend
+    restart: always
+    ports:
+      - "5984:5984"
+    environment:
+      COUCHDB_USER: ""
+      COUCHDB_PASSWORD: ""
     volumes:
-      - couchdb-data:/opt/couchdb/data
-
-networks:
-  frontend:
-  backend:
-
-secrets:
-  azuread_clientsecret:
-    external: true
-  monitool_cookiesecret:
-    external: true
+      - couchdb_data:/opt/couchdb/data
 
 volumes:
-  couchdb-data:
+  api_node_modules:
+  couchdb_data:
