--- a/docker/compose-production.final.yml
+++ b/docker/compose-production.final.yml
@@ -7,7 +7,7 @@ services:
     ports:
       # Production machine is running nginx on the host with certbot for TLS support.
       # It should be moved to docker at a further point.
-      - "8045:80"
+      - "8000:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
@@ -26,7 +26,7 @@ services:
     environment:
       MONITOOL_DEBUG: "FALSE"
       MONITOOL_PORT: "80"
-      MONITOOL_BASE_URL: ""
+      MONITOOL_BASE_URL: "https://monitool-uat.medecinsdumonde.net"
       MONITOOL_COOKIE_SECRET_FILE: "/var/run/secrets/monitool_cookiesecret"
       MONITOOL_COUCHDB_HOST: "couchdb"
       MONITOOL_COUCHDB_USER: "admin"
