change again travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,9 @@ jobs:
     - stage: deploy
       if: branch = dev
       install:
-        - apt-get update -qq
-        - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-        - eval $(ssh-agent -s)
-        - ssh-add <(echo $SSH_PRIVATE_KEY_DEV)
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
-        - ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
-        - chmod 644 ~/.ssh/known_hosts  
-        - npm i
+        # Decrypt the git_deploy_key.enc key into /tmp/git_deploy_key
+        - openssl aes-256-cbc -K $encrypted_d826e144b0a2_key -iv $encrypted_d826e144b0a2_iv -in monitoolbackdev.enc -out monitoolbackdev -d
+        # Make sure only the current user can read the private key
+        - chmod 600 /tmp/git_deploy_key
       script: ./CI/deploy-dev.sh
 
