--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ jobs:
         # Decrypt the git_deploy_key.enc key into /tmp/git_deploy_key
         - openssl aes-256-cbc -K $encrypted_d826e144b0a2_key -iv $encrypted_d826e144b0a2_iv -in monitoolbackdev.enc -out monitoolbackdev -d
         # Make sure only the current user can read the private key
-        - chmod 600 /tmp/monitoolbackdev
+        - chmod 600 monitoolbackdev
       script: ./CI/deploy-dev.sh
 
