--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ jobs:
         - openssl aes-256-cbc -K $encrypted_d826e144b0a2_key -iv $encrypted_d826e144b0a2_iv -in monitoolbackdev.enc -out /tmp/monitoolbackdev -d
         # Make sure only the current user can read the private key
         - chmod 600 /tmp/monitoolbackdev
-      script: ./CI/deploy-dev.sh
+      script: ./CI/deploy-dev.sh /tmp/monitoolbackdev
 
