--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,17 @@ jobs:
         - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/monitoolbackdev </dev/null
       script: ./CI/deploy-dev.sh /tmp/monitoolbackdev
 
+      if: branch = master
+      install:
+        # Decrypt the git_deploy_key.enc key into /tmp/monitoolbackuat
+        - openssl aes-256-cbc -K $encrypted_4ee49d49f72a_key -iv $encrypted_4ee49d49f72a_iv -in monitoolbackuat.enc -out /tmp/monitoolbackuat -d
+        # Make sure only the current user can read the private key
+        - chmod 600 /tmp/monitoolbackuat
+        # Create a script to return the passphrase environment variable to ssh-add
+        - echo 'echo ${SSH_PASSPHRASE_UAT}' > /tmp/askpass && chmod +x /tmp/askpass
+        # Start the authentication agent
+        - eval "$(ssh-agent -s)"
+        # Add the key to the authentication agent
+        - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/monitoolbackuat </dev/null
+      script: ./CI/deploy-uat.sh /tmp/monitoolbackuat
+
