--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
       if: branch = dev
       install:
         # Decrypt the git_deploy_key.enc key into /tmp/monitoolbackdev
-        - openssl aes-256-cbc -K $encrypted_d826e144b0a2_key -iv $encrypted_d826e144b0a2_iv -in monitoolbackdev.enc -out /tmp/monitoolbackdev -d
+        - openssl aes-256-cbc -K $encrypted_d826e144b0a2_key -iv $encrypted_d826e144b0a2_iv -in keys/monitoolbackdev.enc -out /tmp/monitoolbackdev -d
         # Make sure only the current user can read the private key
         - chmod 600 /tmp/monitoolbackdev
         # Create a script to return the passphrase environment variable to ssh-add
@@ -22,7 +22,7 @@ jobs:
       if: branch = master
       install:
         # Decrypt the git_deploy_key.enc key into /tmp/monitoolbackuat
-        - openssl aes-256-cbc -K $encrypted_4ee49d49f72a_key -iv $encrypted_4ee49d49f72a_iv -in monitoolbackuat.enc -out /tmp/monitoolbackuat -d
+        - openssl aes-256-cbc -K $encrypted_4ee49d49f72a_key -iv $encrypted_4ee49d49f72a_iv -in keys/monitoolbackuat.enc -out /tmp/monitoolbackuat -d
         # Make sure only the current user can read the private key
         - chmod 600 /tmp/monitoolbackuat
         # Create a script to return the passphrase environment variable to ssh-add
