--- a/api/package.json
+++ b/api/package.json
@@ -24,11 +24,13 @@
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "JSONStream": "^1.3.4",
+    "@koa/router": "^10.0.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.2.0",
     "expr-eval": "^1.2.1",
     "fast-json-patch": "^2.0.6",
     "is-my-json-valid": "x",
+    "JSONStream": "^1.3.4",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-cookie": "^1.0.0",
